examples/test/testpolicy4959.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4959
  namespace: namespace52
spec:
  podSelector:
    matchLabels:
      key19: value42
      key14: value31
      key3: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value20
      podSelector:
        matchLabels:
          key12: value28
          key48: value45
          key16: value36
